# Multithreading-Course

./: CMakeLists.txt  README.md  main.cpp
headers/: IProcess.hpp  IgnoringProcess.hpp  NamedChannels.hpp  SocketPair.hpp  UnnamedPipesProcess.hpp  ZombieProcess.hpp
sources/: IgnoringProcess.cc  NamedChannels.cpp  SocketPair.cpp  UnnamedPipesProcess.cc  ZombieProcess.cc
